1.添加菜单选项show_subtitle 2.写一个update方法，当点击时显示Crime数量 3.onOptionsItemSelected()方法中连接点击后调用update方法 4.添加菜单联动效果，显示隐藏子标题 5.添加状态标志，进行判断 6.在创建菜单方法中，根据状态，显示，是show按钮还是hide按钮，在这之前，获取菜单选项 7.在更新方法中，根据状态，显示添加数量的内容

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">RecycleViewOfCrime</string>
     <string name="ok">New Crime</string>
+    <string name="show_subtitle">Show Subtitle</string>
+    <string name="hide_subtitle">Hide Subtitle</string>
+    <string name="subtitle_format">%1s crimes</string>
 </resources>
